css/styles.css
/* ... */
.fa-arrow-right {
   font-size: var(--font-h5);
   color: var(--text-dark);
}

/* modified icon for hero section on collection page */
.fa-arrow-right--small {
   font-size: var(--font-h6);
}

.canoer-product-img {
   background-image: url("/images/canoer-jacket-img.jpg");
}
.outdoorer-product-img {
   background-image: url("/images/Outdoor-jacket-img.jpg");
}
.hiker-product-img {
   background-image: url("/images/Hiker-jacket-img.jpg");
}
.skiier-product-img {
   background-image: url("/images/skiier-jacket-img.jpg");
}
.camper-product-img {
   background-image: url("/images/camper-jacket-img.jpg");
}
.explorer-product-img {
   background-image: url("/images/Explorer-jacket-img.jpg");
}

/* collection and specific product page ------------------------*/

/* All-Collections-Page Hero Section ---------*/

.product-collection-banner {
   min-width: 320px;
   max-width: 1520px;
   margin: 0 auto;
   background-color: var(--bg-highlight);
}

/* banner image for specific collection page */
.specific-collection-banner-img {
   position: relative;
   background: url("/images/canoer-banner-image.jpg") no-repeat center/cover;
}

.specific-collection-banner-img:after {
   content: "";
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   background: linear-gradient(180deg, rgba(226, 218, 172, 0) 0%, rgba(171, 164, 130, 0) 35%, rgba(91, 88, 69, 0.69) 69%, rgba(0, 0, 0, 1) 100%);
}

.product-collection-banner__wrapper {
   margin: auto;
   display: grid;
   padding: 50px 16px;
   grid-template-columns: 287px;
   grid-template-rows: minmax(10px, auto) 224px;
   grid-gap: 20px;
   max-width: 295px;
   padding: 20px 0;
}

.product-specific-banner__wrapper {
   margin: auto;
   max-width: 300px;
   height: 450px;
   padding: 20px;
   display: flex;
   align-items: end;
}

.product-collection-banner__title {
   font-size: var(--font-h4);
   font-family: var(--fontFamily-primary);
   color: var(--text-dark);
}

.product-collection-banner__title--color-light {
   color: var(--text-light);
   z-index: 1;
}

.product-collection-category {
   position: relative;
   display: grid;
   grid-template-columns: 286px;
   grid-template-rows: 168px auto;
   transition: shadow 3s ease-in-out;
   cursor: pointer;
}

.product-collection-category:hover {
   box-shadow: 0 3px 6px var(--bg-dark);
}

.product-collection-category--small {
   grid-template-columns: 140px;
   grid-template-rows: 208px auto;
}

.product-collection-category__discount {
   position: absolute;
   top: 10px;
   left: 0;
   width: 40px;
   height: 24px;
   background-color: var(--bg-light);
}

.product-collection-category__discount-rate {
   text-align: center;
   font-size: var(--font-p4);
   font-family: var(--fontFamily-primary);
   color: var(--text-dark);
   padding-top: 7px;
}

.product-collection-category__image {
   object-fit: cover;
   width: 100%;
   height: 100%;
}

.product-collection-category__description {
   background-color: var(--bg-dark);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px 10px;
   color: var(--text-light);
}

.product-collection-category__title {
   font-family: var(--fontFamily-primary);
   font-size: var(--font-p1);
   padding-top: 2px;
}

.product-collection-category__product-price {
   font-family: var(--fontFamily-primary);
   font-size: var(--font-p2);
   padding-top: 10px;
}

.product-collection-category__icon-wrapper {
   padding: 3px 4.5px;
   background-color: var(--bg-light);
   border-radius: 100%;
   text-align: center;
   align-self: end;
   transition: 0.2s ease-in-out;
}

.product-collection-category:hover > .product-collection-category__description .product-collection-category__icon-wrapper {
   background-color: var(--bg-highlight);
}

.product-collection-category__teacher-info {
   font-size: var(--font-h6);
}

.product-specific-section {
   padding-bottom: 50px;
   display: grid;
   grid-template-columns: repeat(2, minmax(140px, auto));
   grid-template-rows: minmax(72px, auto) auto;
   grid-auto-rows: auto;
   grid-gap: 24px 15px;
   justify-content: center;
}

.product-specific-filter-buttons,
.product-specific-section__title {
   grid-column: span 2;
}

.product-specific-filter-buttons {
   width: 100%;
   height: 100%;

   display: flex;
   justify-content: start;
   align-items: center;

   border-bottom: 3px solid var(--bg-dark);
}

.filter-menu {
   z-index: 3;
   visibility: hidden;
   position: fixed;
   top: 84px;
   left: 10px;
   display: grid;
   grid-template-columns: 300px;
   grid-template-rows: 50px auto 100px;
   grid-auto-rows: auto;
   background-color: var(--bg-dark);
   color: var(--text-light);
   transition: top 4s ease-in;
}

.filter-menu:target {
   visibility: visible;
}

.filter-menu__header {
   display: flex;
   justify-content: space-between;
   padding: 10px;
   border-bottom: 3px solid var(--border-light);
}

.filter-menu__header-back-link {
   color: var(--text-light);
}

.filter-menu__content-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 10px;
}

.filter-menu__options {
   border-bottom: 3px solid var(--border-light);
   padding-bottom: 40px;
}

.filter-menu__title {
   margin-top: 10px;
}

.filter-menu__list {
   list-style: none;
}

.filter-menu__item {
   display: flex;
   justify-content: space-between;
   padding: 5px 0;
}

.filter-menu__btn-wrapper {
   text-align: center;
}

.filter-menu__show-results-btn {
   margin: 30px 0;
   justify-self: center;
}

.filter-menu__show-results-btn:hover {
   border: 2px solid var(--border-light);
}

.product-specific-section__title {
   font-size: var(--font-h5);
}

/* Specific-Product-Page */

.specific-product-details {
   max-width: 320px;
   margin: 0 auto;
   background-color: var(--bg-light);
   display: grid;
   grid-template-rows: 456px auto;
}

.specific-product-details__img-carousel {
   max-width: 100%;
   background: url(/images/Canoer-jacket-img.jpg) no-repeat center/cover;
}
/* ... */

